--- a/client/index.html
+++ b/client/index.html
@@ -6,6 +6,8 @@
   <link rel="icon" type="image/svg+xml" href="/shopping-bag.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Pantry</title>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&family=Titillium+Web&display=swap"
+    rel="stylesheet">
 </head>
 
 <body>
